1.24
- Fixed issues with DPS calculation.
- Tweak history page for speed.

1.23
- Added GNB to tank group (so they'll appear with blue background).
- Tweaks to encounter detection, simply to use "you obtained tomestones" message to flag clear.
- Added 'Ended' status for encounters with unknown status (zone change, etc).
- Fixed date range offset for history.

1.22
- Fix bug in stat collector.
- Log clean up goroutine.
- Add DNC/GNB icons.
- Remove check for logs in history because of slowness.

1.21
- Log file clean up function.
- Fixed timing delay issue with all trigger functions that supported delay.
- Added support to import triggers in YAML.
- Stat collector to track usage.
- History search with date range selector.

1.20
- Added ability to import and export compressed base64 triggers.
- Fixed bug in trigger enable/disable action functions.
- Added new trigger action functions, wait, set, get, log.

1.19
- Fixed a bug with ACT trigger import.
- Switched CSS preprocessor from SCSS to GCSS.
- Responsive CSS tweaks.

1.18
- Added "triggers" view with support for complex triggers and ACT import.

1.17
- Added "views" API to allow for easy creation of new interfaces.
- Numerous tweaks to encounter detection.
- Numerous tweaks to interface.
- Timeline view is now rendered entirely in HTML5 canvas.
- Some timeline functionality removed in favor of pushing out new version more quickly.
- Table view is now the default view.

1.16
- Tweaks and hotfixes to server side log parsing.
- Imposed a delay before a new encounter can begin.
- Fixed table view when swapping to it from another view.
- Fixed combatant data when viewing past encounters.

1.15
- Server now tracks encounters to determine accurately when encounters start and end, independent of ACT.
- Added hamburger menu with view changer.
- Added 'table' view.
- Fixed timeline scroll on touch devices.

1.14
- Rebuilt timeline renderer, now uses HTML5 canvas.