@@ -127,6 +127,7 @@
             <strong>Bug Fixes</strong>
             <ul>
                 <li>Fixes for DPS calculation.</li>
+                <li>Fix log parsing issue that I believe resulted from last ACT plugin update.</li>
             </ul>
         </p>    
         <h3>Version 1.23</h3>
