@@ -1,6 +1,7 @@
 1.24
 - Fixed issues with DPS calculation.
 - Tweak history page for speed.
+- Fix log parsing issue that I believe resulted from last ACT plugin update.
 
 1.23
 - Added GNB to tank group (so they'll appear with blue background).
